--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,8 @@ include LICENSE
 include README.rst
 include HISTORY.rst
 include AUTHORS.rst
-include requirements.txt
+include Pipfile
+include Pipfile.lock
 
 recursive-include examples *.py
 recursive-include tests *
