--- a/setup.cfg
+++ b/setup.cfg
@@ -11,5 +11,24 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
+max-line-length = 120
+extend-ignore = E203,W503
+max-complexity = 10
+count = True
+statistics = True
+inline-quotes = '
 
+[mypy]
+strict = True
+warn_unreachable = True
+follow_imports = silent
+
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
+
+[pylint.'MESSAGES CONTROL']
+disable = all
+enable = W0613,W0101
