--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include LICENSE
-include README.rst
+include README.md
 include HISTORY.rst
-include AUTHORS.rst
+include AUTHORS.md
 
 recursive-include tests *
 recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
